# fisher-accelerate

./: .gitignore  README.md
accelerate/: README.md  fisher-accelerate.cabal  ghci  stack.yaml
accelerate/src/: Main.hs  Solve.hs  Type.hs
accelerate/tools/: phi.py  phi.sh
c/: Makefile  operators.c
